fix(client): Header extend container extends on render feat(client): Make minipages collapse to the right on big screens style: Add shadow to minipages

--- a/client/src/components/containers/MiniPagesContainer/MiniPageContainer.module.scss
+++ b/client/src/components/containers/MiniPagesContainer/MiniPageContainer.module.scss
@@ -30,6 +30,7 @@
   z-index: 3;
   flex-wrap: nowrap;
   gap: 0;
+  box-shadow: $elevation-1;
 }
 
 .topLineContainer {
